--- a/my_first_simulation/controllers/WeBotsEclipse/.project
+++ b/my_first_simulation/controllers/WeBotsEclipse/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>java</name>
+			<type>2</type>
+			<location>C:/Users/utente/AppData/Local/Programs/Webots/lib/controller/java</location>
+		</link>
+	</linkedResources>
 </projectDescription>
